--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ asttokens==3.0.0
 colorama==0.4.6
 decorator==5.2.1
 Django==4.2.11
+django-cors-headers==4.7.0
 djangorestframework==3.14.0
 exceptiongroup==1.3.0
 executing==2.2.0
