--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.7.2
+asgiref==3.8.1
 asttokens==3.0.0
 certifi==2024.8.30
 cffi==1.17.1
@@ -8,7 +8,7 @@ cryptography==43.0.3
 decorator==5.2.1
 defusedxml==0.7.1
 dj-rest-auth==7.0.0
-Django==4.2.11
+Django==5.2.1
 django-allauth==0.61.1
 django-cors-headers==4.7.0
 django-extensions==4.1
@@ -28,11 +28,13 @@ pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python3-openid==3.2.0
 pytz==2024.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+six==1.17.0
 sqlparse==0.4.4
 stack-data==0.6.3
 traitlets==5.14.3
