--- a/frontend/fin_pjt_kong_yang/package.json
+++ b/frontend/fin_pjt_kong_yang/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.3.0",
     "v-calendar": "^3.1.2",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
